Added code to allow using University of Utah URL - hardcoded, so requires manual change

--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
               <p class="lead">For more information go to:<p>
               <%
               _.each(feed, function(feedItem) { %>
-                <p>Data source: <%= feedItem.title.value[0] %></p>
+                <p>Data source: <%= feedItem.title.value[0] %>
                   <%
                 _.each(feedItem.entry, function(entryItem) {
                   _.each(entryItem.link, function(linkItem) {
                     %>
-                    <a href='<%= linkItem.href %>' target="_blank"><%= entryItem.title.value[0] || linkItem.title || linkItem.href %> from <%= getHostname(linkItem.href) %></a>
+                    <a href='<%= linkItem.href %>' target="_blank"><%= entryItem.title.value[0] || linkItem.title || linkItem.href %> from <%= getHostname(linkItem.href) %></a></p>
                 <%});
                 });
               });
